force-app/main/default/objects/WhatsApp_Settings__c/WhatsApp_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>WhatsApp Settings</label>
</CustomObject>