force-app/main/default/objects/WhatsApp_Settings__c/fields/Phone_Number_Id__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Id__c</fullName>
    <label>Phone Number Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>