force-app/main/default/objects/WhatsApp_Settings__c/fields/Verify_Token__c.field-meta.xml
<CustomField>
    <fullName>Verify_Token__c</fullName>
    <label>Verify Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>